# eo2lp

./: .gitignore  README.md  dune-project  eo.bnf  eo2lp.opam  get_cpc_less.sh
cpc-less/: CompOp.eo  Cpc.eo
cpc-less/programs/: Nary-less.eo  Nary.eo  Utils-less.eo
cpc-less/rules/: Booleans-less.eo  Builtin.eo  Rewrites-less.eo  Uf.eo
cpc-less/theories/: Arith.eo  Builtin.eo
lp/: Prelude.lp  Syntax.lp  lambdapi.pkg
src/: ast.ml  ast_cc.ml  cc_term.ml  context.ml  dune  encoding.ml  eunoia.ml  inference.ml  lexer.mll  main.ml  nary.ml  parser.mly  prelude.ml  term.ml  theory.ml  translate_cmd.ml  translate_trm.ml  translation.ml
test/: basic_unsat_example.smt2  rule_frequencies.txt  strings_sat.smt2  strings_unsat.prf.smt2  strings_unsat.smt2  test_rules.py
test/ethos-smtlibTests/: rule_frequencies.txt
test/rodin/: rule_frequencies.txt
tex/: eo2lp.macros.tex  eo2lp.tex  eoas.tex  inria.bib  intro.tex  jbw-boxfigure.sty  jbw-fix-hyperref-autoref.sty  lp.tex  macros.tex  plan.md  preamble.tex  res.tex  talk.macros  talk.tex
