(ocamllex lexer)
(menhir
 (modules parser)
)

(env
 (dev (flags (:standard -warn-error -A)))
)

(library
 (name eo2lp)
 (public_name eo2lp)
 (modules
   parser lexer prelude
   ast_eo term_cc context_cc
  )
 (flags :standard -w -8)
 (libraries ppx_deriving str ocamlgraph)
 (preprocess (pps ppx_deriving.show))
)
